[package]
name = "nft-register"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# CosmWasm and Secret Network dependencies
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.10", features = ["stargate"] }
secret-toolkit = { version = "0.10.0", features = ["storage", "utils"] }
serde = { version = "1.0.147", features = ["derive"] }
schemars = "0.8.11"

[features]
default = ["stargate"]
stargate = []

[dev-dependencies]
cosmwasm-schema = "1.2.2"
cosmwasm-std = { version = "1.2.2", features = ["staking", "stargate"] }
cosmwasm-vm = { version = "1.2.2", default-features = false }
